# bittorrent

./: Cargo.toml  README.md  flake.nix
bencode/: Cargo.toml
bencode/src/: de.rs  lib.rs
src/: bencode.rs  command.rs  downloader.rs  main.rs  peer.rs  torrent.rs  tracker.rs  util.rs
src/bencode/: de.rs  error.rs  ser.rs
src/peer/: message.rs  piece.rs
