# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "bittorrent-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
# Error handling
anyhow = "1.0.68"
# Helps wrap responses from reqwest
bytes = "1.3.0"
# Creating a cli
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
# Grammar based parser generator
peg = "0.8.3"
# For regular expressions
regex = "1"
# Http requests
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
# For json mangling
serde = { version = "1.0.136", features = ["derive"] }
# For bencode encoding/decoding
serde_bencode = "0.2.3"
# For dealing with bytes
serde_bytes = "0.11.12"
# For json mangling
serde_json = "1.0.105"
# For url encoding
serde_urlencoded = "0.7.1"
# Hashing
sha1 = "0.10.1"
# Creating temporary directories
tempfile = "3"
# Error handling
thiserror = "1.0.38"
# Async http requests
tokio = { version = "1.23.0", features = ["full"] }
