[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0.68"
# Bencode serialization and deserialization
bencode = { workspace = true }
# Helps wrap responses from reqwest
bytes = { version = "1.3.0", features = ["serde"] }
# Byte strings helper
bstr = { version = "1.9.1", features = ["serde"] }
# Creating a cli
clap = { version = "4.0.32", features = ["derive"] }
# Helpers for deriving trivial traits
derive_more = "0.99.17"
# Help writing byte string literals to buffers
format-bytes = "0.3.0"
# Urlencoding
form_urlencoded = "1.2.1"
hex = "0.4.3"
# Grammar based parser generator
peg = "0.8.3"
# Random number generation
rand = "0.8.5"
# For regular expressions
regex = "1"
# Http requests
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
# For json mangling
serde = { version = "1.0.136", features = ["derive"] }
# For dealing with bytes
serde_bytes = "0.11.12"
# For json mangling
serde_json = "1.0.105"
# For url encoding
serde_urlencoded = "0.7.1"
# Macros for extra level of serde deserialization and type conversions
serde_with = "3.8.1"
# Hashing
sha1 = "0.10.1"
# Creating temporary directories
tempfile = "3"
# Error handling
thiserror = "1.0.38"
# Async http requests
tokio = { version = "1.38.0", features = ["full"] }

[workspace]
resolver = "2"
members = ["bencode"]

[workspace.dependencies]
bencode = { path = "bencode" }
